# PolymarketPlayerAnalysis

./: .gitignore  CMakeLists.txt  GetPrediction.h  ManageFileData.cpp  ManageFileData.h  Models.h  PolymarketApiQueries.cpp  PolymarketApiQueries.h  PredictionModel.cpp  PredictionModel.h  README.md  StrategyAnalysis.cpp  StrategyAnalysis.h  UserStatsPipeline.cpp  UserStatsPipeline.h  config.json  main.cpp  repomix-output.xml
data/: market-99186634638554651998743980431533134312247631653178164081175829567227353524421.csv  users-cache.csv
include/: ManageFileData.h  Models.h  PolymarketApiQueries.h  ThreadSafeQueue.h  UserStatsPipeline.h
src/: ManageFileData.cpp  PolymarketApiQueries.cpp  UserStatsPipeline.cpp  main.cpp
